apps/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: homepage-security-headers@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.omv.mousses.xyz
      secretName: homepage-tls
  rules:
    - host: home.omv.mousses.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  name: http
